reports/dist/run-full-bench-20260609-085346/gateway-api-envoy-gateway-cert-manager-tls/artifacts/manifests/gatewayclasses.yaml
apiVersion: v1
items:
- apiVersion: gateway.networking.k8s.io/v1
  kind: GatewayClass
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"gateway.networking.k8s.io/v1","kind":"GatewayClass","metadata":{"annotations":{},"name":"envoy"},"spec":{"controllerName":"gateway.envoyproxy.io/gatewayclass-controller"}}
    creationTimestamp: "2026-06-09T13:32:34Z"
    finalizers:
    - gateway-exists-finalizer.gateway.networking.k8s.io
    generation: 1
    name: envoy
    resourceVersion: "903"
    uid: 0aabcbca-baf7-4e6a-9c14-6a983deaff8a
  spec:
    controllerName: gateway.envoyproxy.io/gatewayclass-controller
  status:
    conditions:
    - lastTransitionTime: "2026-06-09T13:32:34Z"
      message: Valid GatewayClass
      observedGeneration: 1
      reason: Accepted
      status: "True"
      type: Accepted
kind: List
metadata:
  resourceVersion: ""
